# Rock

./: .gitignore  CMakeLists.txt  README.md  Rock.sln  compile.bat  compileShaders.bat  runCmake.bat  runDoxygen.bat  setup.bat
Documentation/: Doxyfile
Physics/: Physics.vcxproj  Physics.vcxproj.filters
Physics/include/: collision.hpp  math.hpp  transform.hpp  vector.hpp
Physics/include/components/: colliderComponent.hpp  rigidbodyComponent.hpp  transformComponent.hpp
Physics/include/mathematics/: mathematics.hpp  matrix2.hpp  matrix3.hpp  vector2.hpp  vector3.hpp
Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters
Renderer/include/core/: application.hpp  descriptors.hpp  device.hpp
Renderer/include/examples/: computeApp.hpp  engineApp.hpp  gameApp.hpp  modelApp.hpp
Renderer/include/rendering/: lights.hpp  renderComponent.hpp  renderer.hpp  swapchain.hpp
Renderer/include/window/: ui.hpp  window.hpp
Renderer/res/shaders/engineApp/: frag.spv  main.frag  main.vert  vert.spv
Renderer/res/shaders/gameApp/: frag.spv  main.frag  main.vert
Renderer/src/: main.cpp
Renderer/src/core/: application.cpp  descriptors.cpp  device.cpp
Renderer/src/examples/: computeApp.cpp  engineApp.cpp  gameApp.cpp  modelApp.cpp
Renderer/src/rendering/: renderer.cpp  swapchain.cpp
Renderer/src/window/: window.cpp
Rock/: Rock.vcxproj  Rock.vcxproj.filters
Rock/doc/: Doxyfile
Rock/include/: computeShaderApp.hpp  modelApp.hpp
Rock/include/core/: application.hpp  descriptors.hpp  device.hpp
Rock/include/examples/: computeApp.hpp  modelApp.hpp
Rock/include/rendering/: pipeline.hpp  renderer.hpp  swapchain.hpp
Rock/include/utils/: resources.hpp
Rock/include/window/: eventSystem.hpp  window.hpp
Rock/res/: frag.spv  main.frag  main.vert  vert.spv
Rock/res/shaders/: frag.spv  main.frag  main.vert  vert.spv
Rock/res/shaders/computeApp/: comp.spv  main.comp  main.frag
Rock/res/shaders/modelApp/: frag.spv
Rock/src/: computeShaderApp.cpp  main.cpp  modelApp.cpp
Rock/src/core/: descriptors.cpp  device.cpp
Rock/src/examples/: computeApp.cpp  engineApp.cpp  modelApp.cpp
Rock/src/rendering/: pipeline.cpp  renderer.cpp  swapchain.cpp
Rock/src/window/: eventSystem.cpp  window.cpp
Testing/: Testing.vcxproj  pch.h  test.cpp  test.h
application/: CMakeLists.txt
application/include/: HelperGLFW.h
application/src/: Compression.cpp  Compression.h  HelperGLFW.cpp  Shader.cpp  Shader.h  main.cpp
cmake/: CommonMacros.txt
shared/: CMakeLists.txt
